--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                   <h6 class="category">Pardess</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">Mon alternance</a></h3>
+              <h3 class="card-title"><a href="pardess.html">Mon alternance</a></h3>
               <p class="card-description">
                 PARDESS, société active depuis 2017. 
                 C'est une société par actions simplifiée.
