--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             <a class="nav-link js-scroll" href="#service">Competence</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Experience</a>
+            <a class="nav-link js-scroll" href="#work">???</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#blog">Experinece</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
