--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <a class="nav-link js-scroll active" href="#home">Acceuil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Projets</a>
+            <a class="nav-link js-scroll" href="#about">Profils</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Competence</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">???</a>
+            <a class="nav-link js-scroll" href="#work">Projets</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Experinece</a>
