--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Mes passions
+              Mes Connaisances
             </h3>
             <p class="subtitle-a"> 
             </p>
@@ -153,7 +153,7 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Design</h2>
+              <h2 class="s-title">Html</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -168,7 +168,7 @@
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
+              <h2 class="s-title">Css</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -183,7 +183,7 @@
               <span class="ico-circle"><i class="ion-camera"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Photographie</h2>
+              <h2 class="s-title">Js</h2>
               <p class="s-description text-center">
                 j'aime photograhier des paysage
               </p>
@@ -196,7 +196,7 @@
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
+              <h2 class="s-title">Php</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
