--- a/cogf.html
+++ b/cogf.html
@@ -116,28 +116,12 @@
             </div>
             <div class="article-content">
               <p>
-                CONSEIL ORGANISATION GESTION FINANCIERE. elle est situe au 50 rue de l'Ourq dans le 19 eme arrondissment. active depuis 5 ans cette societe a action simplifies a associe unique spécialisé dans les formalités pour les entreprises.Son effectif est compris entre 6 et 9 salariés. Sur l'année 2020 elle réalise un chiffre d'affaires de 3 998 600,00 € Son effectif est compris entre 6 et 9 salariés. 
-                Sur l'année 2020 elle réalise un chiffre d'affaires de 3 998 600,00€
-              </p>
-              <p>
-                Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris blandit
-                aliquet elit, eget tincidunt
-                nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
-              </p>
-              <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Praesent
-                sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at
-                sem. Donec rutrum congue leo eget malesuada.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.
-                Curabitur arcu erat,
-                accumsan id imperdiet et, porttitor at sem. Vivamus suscipit tortor eget felis porttitor
-                volutpat. Vivamus suscipit tortor eget felis porttitor volutpat. Quisque velit nisi, pretium
-                ut lacinia in, elementum id enim.
+                CONSEIL ORGANISATION GESTION FINANCIERE.
+                Elle est situe au 50 rue de l'Ourq dans le 19 eme arrondissment.
+                Active depuis 5 ans cette societe a action simplifies a associe unique spécialisé dans les formalités pour les entreprises.
+                Son effectif est compris entre 6 et 9 salariés. 
+                Sur l'année 2020 elle réalise un chiffre d'affaires de 3 998 600,00 €
+                Son effectif est compris entre 6 et 9 salariés.
               </p>
               <blockquote class="blockquote">
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -186,21 +170,6 @@
                   <a href="3">Reply</a>
                 </div>
               </li>
-              <li class="comment-children">
-                <div class="comment-avatar">
-                  <img src="img/testimonial-2.jpg" alt="">
-                </div>
-                <div class="comment-details">
-                  <h4 class="comment-author">Oliver Colmenares</h4>
-                  <span>18 Sep 2017</span>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit, provident cumque
-                    ipsam temporibus maiores
-                    quae.
-                  </p>
-                  <a href="3">Reply</a>
-                </div>
-              </li>
             </ul>
           </div>
           <div class="widget-sidebar">
@@ -221,10 +190,10 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">September, 2017.</a>
+                  <a href="#">Dialoguer</a>
                 </li>
                 <li>
-                  <a href="#">April, 2017.</a>
+                  <a href="#">Faire des maquettes</a>
                 </li>
                 <li>
                   <a href="#">Nam quo autem exercitationem.</a>
