--- a/cogf.html
+++ b/cogf.html
@@ -237,26 +237,18 @@
           </div>
           
           <div class="widget-sidebar widget-tags">
-            <h5 class="sidebar-title">Tags</h5>
+            <h5 class="sidebar-title">Conclusion</h5>
             <div class="sidebar-content">
               <ul>
+                <p> Le stage m’a permis de faire mes premiers pas dans le monde du travail. </p>
                 <li>
-                  <a href="#">Web.</a>
+                  <a href="#">Premier point</a>
+                  <p> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement apprécié d’y utiliser de nouveaux logiciel notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
+-le rôle déterminant du chef du projet. </p>
                 </li>
                 <li>
-                  <a href="#">Design.</a>
-                </li>
-                <li>
-                  <a href="#">Travel.</a>
-                </li>
-                <li>
-                  <a href="#">Photoshop</a>
-                </li>
-                <li>
-                  <a href="#">Corel Draw</a>
-                </li>
-                <li>
-                  <a href="#">JavaScript</a>
+                  <a href="#">Deuxieme point</a>
+                   <p> Enfin, ce stage m’a permis de gagner en maturité professionnelle et a renforcé mon souhait de poursuivre mes études avec si possible un pied dans l’entreprise, en alternance. </p>
                 </li>
               </ul>
             </div>
@@ -283,7 +275,7 @@
                   Licensing information: https://bootstrapmade.com/license/
                   Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
                 -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by Shanaël</a>
               </div>
             </div>
           </div>
