--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
     </div>
   </section>
   <!--/ Section Services End /-->
+
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
-         <div class="col-sm-3 col-lg-3">
+        <div class="col-sm-3 col-lg-3">
           <div class="counter-box">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
@@ -246,6 +247,8 @@
               <span class="counter-text">AWARD WON</span>
             </div>
           </div>
+        </div>
+      </div>
     </div>
   </div>
 
