--- a/index.html
+++ b/index.html
@@ -202,53 +202,64 @@
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3 col-lg-3">
-          <div class="counter-box">
-            <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
-            </div>
-            <div class="counter-num">
-              <p class="counter">450</p>
-              <span class="counter-text">WORKS COMPLETED</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3 col-lg-3">
-          <div class="counter-box pt-4 pt-md-0">
-            <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
-            </div>
-            <div class="counter-num">
-              <p class="counter">15</p>
-              <span class="counter-text">YEARS OF EXPERIENCE</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3 col-lg-3">
-          <div class="counter-box pt-4 pt-md-0">
-            <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ios-people"></i></span>
-            </div>
-            <div class="counter-num">
-              <p class="counter">550</p>
-              <span class="counter-text">TOTAL CLIENTS</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3 col-lg-3">
-          <div class="counter-box pt-4 pt-md-0">
-            <div class="counter-ico">
-              <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
-            </div>
-            <div class="counter-num">
-              <p class="counter">36</p>
-              <span class="counter-text">AWARD WON</span>
-            </div>
-          </div>
-        </div>
-      </div>
+    <p class="timeline-title"> Experience</p>
+    <ol class="timeline-list">
+      <li class="timeline-li">
+        <p class="diplome">Pardess</p>
+        <span class="point"></span>
+        <p class="description">
+          Maintenance du site ,gestion du stock.Creation app mobile
+        </p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Mairie</p>
+        <span class="point"></span>
+        <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">COGF</p>
+        <span class="point"></span>
+        <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">LILDVD</p>
+          <span class="point"></span>
+        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p></li>
+      <li class="timeline-li">
+      <p class="diplome">Beyahad</p>
+        <span class="point"></span>
+        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
+      </li>
+    </ol>
+     <p timeline-title> Formations</p>
+    <ol class="timeline-list">
+      <li class="timeline-li">
+        <p class="diplome">BTS SIO</p>
+        <span class="point"></span>
+        <p class="description">
+          Option Slam
+        </p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Mooc</p>
+        <span class="point"></span>
+        <p class="description">Auto-formation Ansii RGPD</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Bac S</p>
+        <span class="point"></span>
+        <p class="description">option mathematiques appliquées</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Premiers secours</p>
+          <span class="point"></span>
+        <p class="description">Formation</p></li>
+      <li class="timeline-li">
+      <p class="diplome">Beyahad</p>
+        <span class="point"></span>
+        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
+      </li>
+    </ol>
     </div>
   </div>
 
