--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <!--/ Section Services End /-->
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
-    <p class="timeline-title"> Experience</p>
+    <h2 class="timeline-title"> Experience</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
         <p class="diplome">Pardess</p>
@@ -230,7 +230,7 @@
         <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
       </li>
     </ol>
-     <p timeline-title> Formations</p>
+    <h2 class="timeline-title"> Formations</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
         <p class="diplome">BTS SIO</p>
