--- a/index.html
+++ b/index.html
@@ -153,9 +153,13 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Html</h2>
-              <p class="s-description text-center">
-              </p>
+              <h6 class="s-title">Web</h6>
+              <ul>
+                <li>Html </li>
+                <li>CSS </li>
+                <li>Js </li>
+                <li>PHP</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -165,9 +169,11 @@
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Css</h2>
-              <p class="s-description text-center">
-              </p>
+              <h6 class="s-title">Base de données</h6>
+              <ul>
+                <li>SQL</li>
+                <li>Mysql</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -177,21 +183,12 @@
               <span class="ico-circle"><i class="ion-camera"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">JavaScript</h2>
-              <p class="s-description text-center">
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Php</h2>
-              <p class="s-description text-center">
-              </p>
+              <h2 class="s-title">Logiciel que j'utilise</h2>
+              <ul>
+                <li>Office</li>
+                <li>Photoshop</li>
+                <li>VisualStudio code</li>
+              </ul>
             </div>
           </div>
         </div>
