--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           <div id="testimonial-mf" class="owl-carousel owl-theme">
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
+                <!--/ <img src="img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a"> /-->
                 <span class="author">Tableau de compétence</span>
               </div>
               <div class="content-test">
@@ -398,7 +398,7 @@
             </div>
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
+                <!--/ <img src="img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a"> /-->
                 <span class="author">CV</span>
               </div>
               <div class="content-test">
