--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <div class="work-box">
             <a href="img/work-1.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-1.jpg" alt="" class="img-fluid">
+                <img src="lafleur.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -304,7 +304,7 @@
           <div class="work-box">
             <a href="img/work-2.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
+                <img src="symfony.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -328,7 +328,7 @@
           <div class="work-box">
             <a href="img/work-3.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+                <img src="logo_java.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -352,12 +352,12 @@
           <div class="work-box">
             <a href="img/work-4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
+                <img src="glpi.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">GLPi</h2>
+                    <h2 class="w-title">GLPI</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Mr Foujols</span> / <span class="w-date">2 eme année</span>
                     </div>
