--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <div class="work-box">
             <a href="img/work-1.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="lafleur.jpg" alt="" class="img-fluid">
+                <img src="essaiboot.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -403,9 +403,10 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger ou voir mon cv Cliquez Ici
+                  Pour télécharger ou voir mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
                 </p>
-                <span class="comit"><i class="fa fa-quote-right"></i></span>
+                <span class="comit"><i class="fa fa-quote-right" ></i></span>
+                
               </div>
             </div>
           </div>
