--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
+              <span class="ico-circle"><i class="fa-light fa-circle-plus"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Logiciel que j'utilise</h2>
@@ -328,7 +328,7 @@
           <div class="work-box">
             <a href="img/work-3.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="logo_java.jpg" alt="" class="img-fluid">
+                <img src="java.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -352,7 +352,7 @@
           <div class="work-box">
             <a href="img/work-4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="glpi.png" alt="" class="img-fluid">
+                <img src="glpi (2).png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
