--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <a class="nav-link js-scroll active" href="#home">Acceuil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Profils</a>
+            <a class="nav-link js-scroll" href="#about">Profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Competence</a>
+            <a class="nav-link js-scroll" href="#service">Competences</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Projets</a>
@@ -180,7 +180,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="fa-light fa-circle-plus"></i></span>
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Logiciel que j'utilise</h2>
