--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@
               </div>
               <h3 class="card-title"><a href="cogf.html">Mon stage</a></h3>
               <p class="card-description">
-                CONSEIL ORGANISATION GESTION FINANCIERE.
-                Elle est situe au 50 rue de l'Ourq dans le 19 eme arrondissment. 
-                Active depuis 5 ans cette societe a action simplifies a associe unique
+                COGF. 
+                Active depuis 5 ans cette societe a action simplifies a associe unique.
+                Yossef Asseraf, est président de la société PARDESS.
               </p>
             </div>
           </div>
@@ -541,12 +541,6 @@
             <div class="copyright-box">
               <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
               <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
                 Designed by Shanaël</a>
               </div>
             </div>
