--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="lafleurb.png" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="essaiboot.png" alt="" class="img-fluid">
               </div>
@@ -302,7 +302,7 @@
         </div>
         <div class="col-md-5">
           <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+            <a href="rismedical.png" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="symfony.png" alt="" class="img-fluid">
               </div>
@@ -326,7 +326,7 @@
         </div>
         <div class="col-md-5">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="Java (1).png" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="java.png" alt="" class="img-fluid">
               </div>
