--- a/index.html
+++ b/index.html
@@ -435,19 +435,18 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="cogf.html"><img src="LogoCOGFGROUPE.jpg" alt="" class="img-fluid"></a>
+              <a href="cogf.html"><img src="ilorzal.png".png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
                 <div class="card-category">
-                  <h6 class="category">Cogf</h6>
+                  <h6 class="category">Iloral vision</h6>
                 </div>
               </div>
               <h3 class="card-title"><a href="cogf.html">Mon stage</a></h3>
               <p class="card-description">
-                COGF. 
-                Active depuis 5 ans cette societe a action simplifies a associe unique.
-                Yossef Asseraf, est président de la société PARDESS.
+                ILORAL VISION, société par actions simplifiée est en activité depuis 6 ans. Domiciliée à NEUILLY-SUR-SEINE. 
+                Serge DRAI est président de l'entreprise ILORAL VISION.
               </p>
             </div>
           </div>
