--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
       </li>
       <li class="timeline-li">
-        <p class="diplome">COGF</p>
+        <p class="diplome">ILORAL</p>
         <span class="point"></span>
         <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
       </li>
@@ -435,7 +435,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="cogf.html"><img src="ilorzal.png".png" alt="" class="img-fluid"></a>
+              <a href="iloral.html"><img src="ilorzal.png".png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -443,7 +443,7 @@
                   <h6 class="category">Iloral vision</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="cogf.html">Mon stage</a></h3>
+              <h3 class="card-title"><a href="iloral.html">Mon stage</a></h3>
               <p class="card-description">
                 ILORAL VISION, société par actions simplifiée est en activité depuis 6 ans. Domiciliée à NEUILLY-SUR-SEINE. 
                 Serge DRAI est président de l'entreprise ILORAL VISION.
