--- a/iloral.html
+++ b/iloral.html
@@ -105,10 +105,10 @@
             </div>
             <div class="article-content"> 
               <div class="img-left">
-              <img src="iloral3.png" alt="" class="img-stage">  
+              <img src="iloralsur.png" alt="" class="img-stage">  
             </div>
             <div class="img-right">
-            <img src="iloral2.png" alt="" class="img-stage">
+            <img src="iloral3.png" alt="" class="img-stage">
           </div>
           </div>
             <blockquote class="blockquote">
