--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
       </li>
       <li class="timeline-li">
-        <p class="diplome">ILORAL</p>
+        <p class="diplome">Ioral</p>
         <span class="point"></span>
         <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
       </li>
@@ -403,10 +403,13 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger ou voir mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
+                  Pour télécharger mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
                 </p>
-                <span class="comit"><i class="fa fa-quote-right" ></i></span>
-                
+                <p class ="description lead" > pour le voir </p>
+                <span class="comit"><i class="fa fa-quote-right" >
+                  
+                  <a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank">.</a>
+                  </i></span>
               </div>
             </div>
           </div>
