--- a/iloral.html
+++ b/iloral.html
@@ -139,17 +139,17 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">Rénovation compléte du site</a>
+                  <a href="#4">Rénovation compléte du site</a>
                 </li>
                 
                 <li>
-                  <a href="#">Création du site TotalValorisation</a>
+                  <a href="#5">Création du site TotalValorisation</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="widget-sidebar">
-            <h5 class="sidebar-title">Renovation du site <a href="https://www.iloral-vision.com/" target = blank >Iloral Vision</a></h5>
+            <h5 id="4"class="sidebar-title">Renovation du site <a href="https://www.iloral-vision.com/" target = blank >Iloral Vision</a></h5>
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
@@ -157,17 +157,17 @@
                    
               <ul>
                 <li>
-                  <a href="#">Maquettes</a>
+                  <a href="#"data-lightbox="gallery-mf">Maquettes</a>
                 </li>
                 <li>
-                  <a href="#">Refonte du logo</a>
+                  <a href="#"data-lightbox="gallery-mf">Refonte du logo</a>
                 </li>
                 </li>
                 <li>
                   <a href="https://www.iloral-vision.com/" target = blank>Site sous CMS</a>
                 </li>
                 <li>
-                  <a href="#">Création de signatures de mail</a>
+                  <a href="#"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
                 <li>
                   <a href="#">Modification via un <a href="https://docs.google.com/presentation/d/1s0B-54WXa2vMt-tc5hxGMU-mpr_-EEkq1n7JiwqbX24/edit#slide=id.gdfd5a9e854_2_17" target = blank >Google docs</a></a>
@@ -176,23 +176,23 @@
             </div>
           </div>
           <div class="widget-sidebar">
-            <h5 class="sidebar-title">Création du site <a href="https://total-valorisation.fr" target = blank >TotalValorisation</a></h5>
+            <h5 id="5"class="sidebar-title">Création du site <a href="https://total-valorisation.fr" target = blank >TotalValorisation</a></h5>
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">Dialoguer</a>
+                  <a href=""data-lightbox="gallery-mf">Dialoguer</a>
                 </li>
                 <li>
-                  <a href="#">Elaboration du cahier des charges</a>
+                  <a href=""data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
                 </li>
                 <li>
-                  <a href="#">Faire des maquettes</a>
+                  <a href="#"data-lightbox="gallery-mf">Faire des maquettes</a>
                 </li>
                 <li>
-                  <a href="https://total-valorisation.fr" target = blank>Réalisation du site</a>
+                  <a href="https://total-valorisation.fr" target = blank >Réalisation du site</a>
                 </li>
                 <li>
-                  <a href="#">Création de signatures de mail</a>
+                  <a href="#"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
               </ul>
             </div>
