--- a/iloral.html
+++ b/iloral.html
@@ -160,14 +160,14 @@
                   <a href="#"data-lightbox="gallery-mf">Maquettes</a>
                 </li>
                 <li>
-                  <a href="#"data-lightbox="gallery-mf">Refonte du logo</a>
+                  <a href="refonte.png"data-lightbox="gallery-mf">Refonte du logo</a>
                 </li>
                 </li>
                 <li>
                   <a href="https://www.iloral-vision.com/" target = blank>Site sous CMS</a>
                 </li>
                 <li>
-                  <a href="#"data-lightbox="gallery-mf">Création de signatures de mail</a>
+                  <a href="signature.png"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
                 <li>
                   <a href="#">Modification via un <a href="https://docs.google.com/presentation/d/1s0B-54WXa2vMt-tc5hxGMU-mpr_-EEkq1n7JiwqbX24/edit#slide=id.gdfd5a9e854_2_17" target = blank >Google docs</a></a>
