--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Symfony</h2>
+                    <a href="https://github.com/ort-france/bts-alt-g1-2022" target = blank class="w-title">Symfony</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Mr Foujols</span> / <span class="w-date">2 eme Année</span>
                     </div>
@@ -330,7 +330,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Java</h2>
+                    <a href="https://github.com/IsaacLaifer/SIOALTGSB3" target = blank class="w-title">Java</a>
                     <div class="w-more">
                       <span class="w-ctegory">Mr Buffetau</span> / <span class="w-date">2eme année</span>
                     </div>
