--- a/iloral.html
+++ b/iloral.html
@@ -153,7 +153,7 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">Reunion</a>
+                  <a>Reunion</a>
                    
               <ul>
                 <li>
@@ -170,7 +170,7 @@
                   <a href="signature.png"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
                 <li>
-                  <a href="#">Modification via un <a href="https://docs.google.com/presentation/d/1s0B-54WXa2vMt-tc5hxGMU-mpr_-EEkq1n7JiwqbX24/edit#slide=id.gdfd5a9e854_2_17" target = blank >Google docs</a></a>
+                  <a>Modification via un <a href="https://docs.google.com/presentation/d/1s0B-54WXa2vMt-tc5hxGMU-mpr_-EEkq1n7JiwqbX24/edit#slide=id.gdfd5a9e854_2_17" target = blank >Google docs</a></a>
                 </li>
               </ul>
             </div>
@@ -180,7 +180,7 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href=""data-lightbox="gallery-mf">Dialoguer</a>
+                  <a >Dialoguer</a>
                 </li>
                 <li>
                   <a href=""data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
