--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Shanaël Arzouan</span></p>
                       <p><span class="title-s">Email: </span> <span>shanaelar@gmail.com</span></p>
+                      <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="https://shanael25.github.io/portfolio1/certification.pdf" target= "blank" role="button">Mes certifications</a></p>
                     </div>
                   </div>
                 </div>
@@ -408,6 +409,7 @@
                   <a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank">.</a>
                   </i></span>
               </div>
+              
             </div>
           </div>
         </div>
