--- a/iloral.html
+++ b/iloral.html
@@ -94,18 +94,18 @@
               <ul>
                 <li>
                   <span class="ion-ios-person"></span>
-                  <a href="#">Serge DRAI</a>
+                  <a >Serge DRAI</a>
                 </li>
                
                 <li>
                   <span class="ion-chatbox"></span>
-                  <a href="#"></a>
+                  <a ></a>
                 </li>
               </ul>
             </div>
             <div class="article-content"> 
               <div class="img-left">
-              <img src="iloralsur.png" alt="" class="img-stage">  
+              <img src="iloral.png" alt="" class="img-stage">  
             </div>
             <div class="img-right">
             <img src="iloral3.png" alt="" class="img-stage">
