--- a/pardess.html
+++ b/pardess.html
@@ -113,21 +113,21 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="9">Refonte du site</a>
+                  <a href="#9">Refonte du site</a>
                 </li>
                 <li>
-                  <a href="10">Maintenace du site</a>
+                  <a href="#10">Maintenace du site</a>
                 </li>
                 <li>
-                  <a href="11">Creation d'une appplication mobile</a>
+                  <a href="#11">Creation d'une appplication mobile</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="widget-sidebar">
-            <h3 id="9" class="sidebar-title">Refonte du site</h3>
+            <h3 id="9" class="sidebar-title"> <a href="https://pardess.eu" target="blank">Refonte du site</h3></a>
             <h3 id="10" class="sidebar-title">Maintenace du site</h3>
-            <h3 id="11" class="sidebar-title">Creation d'une appplication mobile</h3>
+            <h3 id="11" class="sidebar-title"> <a href="maquettePardess.pdf" target="blank">Creation d'une appplication mobile</h3></a>
             
           </div>
           <div class="widget-sidebar widget-tags">
