--- a/pardess.html
+++ b/pardess.html
@@ -94,7 +94,7 @@
             <ul>
               <li>
                 <span class="ion-ios-person"></span>
-                <a href="#">Mehir Toubian</a>
+                <a>Mehir Toubian</a>
               </li>
             </ul>
           </div>
