--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Acceuil</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">Profil</a>
           </li>
           <li class="nav-item">
@@ -155,7 +152,7 @@
               <ul>
                 <li>Html </li>
                 <li>CSS </li>
-                <li>Js </li>
+                <li>Javascript </li>
                 <li>PHP</li>
               </ul>
             </div>
@@ -367,7 +364,7 @@
                 <p class="description lead">
                   Pour télécharger ou voir mon tableau de compétences Cliquez Ici
                 </p>
-                <span class="comit"><i class="fa fa-quote-right"></i></span>
+                <span class="comit"><i class="fa fa-quote-right" ><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank">.</a></i></span>
               </div>
             </div>
             <div class="testimonial-box">
@@ -381,7 +378,6 @@
                 </p>
                 <p class ="description lead" > pour le voir </p>
                 <span class="comit"><i class="fa fa-quote-right" > 
-                  
                   <a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank">.</a>
                   </i></span>
               </div>
